turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:8: error: '=' expected but '(' found.
def motif():Unit( = {
                ^Kerr36:12: error: illegal start of simple expression
}
^